--- a/metadata.yaml
+++ b/metadata.yaml
@@ -36,5 +36,6 @@ subjects:
 - !lcsh 'Political science -- Early works to 1800'
 - !lcc 'B'
 - !lcsh 'Philosophy, Ancient'
+- GITenberg
 title: Πολιτικός
 url: http://www.gutenberg.org/ebooks/34896
